# todo-app

./: .env  .gitignore  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1ac7baf39962_created_tasks_table.py  1f5a30e8c9b4_create_tasks_table.py  74c62fc0e92f_create_users_table.py
src/: main.py
src/api/: task_router.py  user_router.py
src/core/: database.py  security.py
src/models/: database_models.py
src/repositories/: user_repository.py
src/schemas/: task_schemas.py  user_schemas.py
src/services/: user_service.py
tests/: test_user.py  user_tests.py
