[project]
name = "todo-app"
version = "0.1.0"
description = "An API that helps track your work and plan daily tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncio>=4.0.0",
    "fastapi>=0.138.1",
    "psycopg2>=2.9.12",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
