[project]
name = "todo-app"
version = "0.1.0"
description = "An API that helps track your work and plan daily tasks"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncio>=4.0.0",
    "fastapi>=0.138.1",
    "jwt>=1.4.0",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pytest>=9.1.1",
    "python-jose[cryptography]>=3.5.0",
    "ruff>=0.15.20",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
